Model dosyası düzeltildi

--- a/model.ipynb
+++ b/model.ipynb
@@ -844,7 +844,7 @@
    "id": "777dcb2a",
    "metadata": {},
    "source": [
-    "*Optimizasyon sonucu 1 puan arttırdık sonucu.*"
+    "*Optimizasyon sonucu 1 puan arttırdık.*"
    ]
   },
   {
