--- a/analiz.ipynb
+++ b/analiz.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "id": "af6edc31",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 107,
    "id": "4158a73f",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "4    5   may       673         2     -1         0  unknown     yes  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 108,
    "id": "387dd64d",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 109,
    "id": "f8ac61da",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 110,
    "id": "2f4af34c",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "0c621181",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "Text(0, 0.5, 'Yaş')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "13dbf218",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Meslek durumuna göre abone olup olmadığı \n",
+      "Meslek durumuna göre kampanyaya katılıp katılmadığı \n",
       "\n",
       "Mesleğe Göre Abonelik Oranları\n",
       "               Toplam Müşteri  Abone Olan  Dönüşüm Oranı (%)\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "id": "3c30630a",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 114,
    "id": "826ced87",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "id": "94e444cc",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "id": "0d2547ff",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 117,
    "id": "2323f071",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "id": "54891652",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 119,
    "id": "17f50e12",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "id": "fa563ebb",
    "metadata": {},
    "outputs": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 121,
    "id": "9ff20edd",
    "metadata": {},
    "outputs": [
@@ -899,19 +899,19 @@
     "#Eğitim durumuna göre analiz\n",
     "print(\"Eğitim durumuna göre abone olup olmadığı \\n\")\n",
     "\n",
-    "job_counts=df.groupby('education')['deposit'].agg(['count','sum'])\n",
-    "job_counts.columns=[\"Toplam Müşteri\",\"Abone Olan\"]\n",
+    "edu_counts=df.groupby('education')['deposit'].agg(['count','sum'])\n",
+    "edu_counts.columns=[\"Toplam Müşteri\",\"Abone Olan\"]\n",
     "\n",
-    "job_counts['Dönüşüm Oranı (%)'] = (job_counts['Abone Olan'] / job_counts['Toplam Müşteri']) * 100\n",
+    "edu_counts['Dönüşüm Oranı (%)'] = (edu_counts['Abone Olan'] / edu_counts['Toplam Müşteri']) * 100\n",
     "\n",
-    "job_analysis = job_counts.sort_values(by='Dönüşüm Oranı (%)', ascending=False)\n",
+    "edu_analysis = edu_counts.sort_values(by='Dönüşüm Oranı (%)', ascending=False)\n",
     "\n",
     "print(\"Eğitime Göre Abonelik Oranları\")\n",
-    "print(job_analysis)\n",
+    "print(edu_analysis)\n",
     "\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "plt.bar(job_analysis.index, job_analysis['Dönüşüm Oranı (%)'])\n",
+    "plt.bar(edu_analysis.index, edu_analysis['Dönüşüm Oranı (%)'])\n",
     "plt.xlabel(\"Eğitim\")\n",
     "plt.ylabel(\"Dönüşüm Oranı (%)\")\n",
     "plt.title(\"Eğitime Göre Abonelik Oranları (%)\")\n",
